# pc1-pareja11

./: .gitignore  CMakeLists.txt  README.md  actividad1.md
bench/: benchmark.cpp
reports/: coverage_report.md  optimization_report.md  profiling_report.md
src/: solution.cpp  solution.hpp
tests/: tests.cpp
